Fixed dark mode switch on mobile

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -16,7 +16,58 @@ body{
     font-family: 'Open Sans', sans-serif;
     transition: background-color .3s linear;
 
-    &.dark section.hero .dark-mode p{
+    .dark-mode{
+        display: inline-block;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+
+        p{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-transform: uppercase;
+            color: white;
+            user-select: none;
+
+            svg{
+                justify-content: center;
+                align-items: center;
+                padding-left: 15px;
+                width: 50px;
+                height: 50px;
+                cursor: pointer;
+
+                &#darkmode-off{
+                    display: inline-block;
+                }
+
+                &#darkmode-on{
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .mobile-nav{
+        .dark-mode{
+            position: initial;
+
+            p{
+                svg{
+                    &#darkmode-off{
+                        display: inline-block;
+                    }
+    
+                    &#darkmode-on{
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+
+    &.dark section.hero .dark-mode p, &.dark .mobile-nav .dark-mode p{
         #darkmode-off{
             display: none;
         }
@@ -248,38 +299,6 @@ body{
                 width: 50px;
                 height: 50px;
                 cursor: pointer;*/
-            }
-
-            .dark-mode{
-                display: inline-block;
-                position: absolute;
-                bottom: 20px;
-                right: 20px;
-                p{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    text-transform: uppercase;
-                    color: white;
-                    user-select: none;
-
-                    svg{
-                        justify-content: center;
-                        align-items: center;
-                        padding-left: 15px;
-                        width: 50px;
-                        height: 50px;
-                        cursor: pointer;
-
-                        &#darkmode-off{
-                            display: inline-block;
-                        }
-
-                        &#darkmode-on{
-                            display: none;
-                        }
-                    }
-                }
             }
         }
 
